// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BoxResultsDisplay > BoxResultsDisplay component > should match snapshot for basic packing result 1`] = `
<div
  class="box-results mt-4"
>
  <h3
    class="h4 mb-3"
  >
    Box Packing Results
  </h3>
  <p
    class="mb-2"
  >
    Items will be packed into
     
    <strong>
      1
    </strong>
     box(es).
  </p>
  <div
    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
  >
    <div
      class="mb-3"
    >
      <div
        class="bg-white border border-gray-200 rounded shadow-sm h-full"
      >
        <div
          class="bg-blue-500 text-white px-4 py-3 border-b border-gray-200"
        >
          <div
            class="flex items-center"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-package2 lucide-package-2 mr-2"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3v6"
              />
              <path
                d="M16.76 3a2 2 0 0 1 1.8 1.1l2.23 4.479a2 2 0 0 1 .21.891V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V9.472a2 2 0 0 1 .211-.894L5.45 4.1A2 2 0 0 1 7.24 3z"
              />
              <path
                d="M3.054 9.013h17.893"
              />
            </svg>
            <h4
              class="text-lg font-semibold mb-0"
            >
              Box 
              1
              : 
              Test Box
            </h4>
          </div>
        </div>
        <div
          class="p-4"
        >
          <div
            class="mb-3"
          >
            <div
              class="flex items-center mb-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-ruler mr-1"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.3 15.3a2.4 2.4 0 0 1 0 3.4l-2.6 2.6a2.4 2.4 0 0 1-3.4 0L2.7 8.7a2.41 2.41 0 0 1 0-3.4l2.6-2.6a2.41 2.41 0 0 1 3.4 0Z"
                />
                <path
                  d="m14.5 12.5 2-2"
                />
                <path
                  d="m11.5 9.5 2-2"
                />
                <path
                  d="m8.5 6.5 2-2"
                />
                <path
                  d="m17.5 15.5 2-2"
                />
              </svg>
              <span
                class="font-bold mr-2"
              >
                Box Dimensions:
              </span>
              200
               × 
              150
               × 
              100
               
              mm
            </div>
            <div
              class="flex items-center mb-2"
            >
               
              <svg
                aria-hidden="true"
                class="lucide lucide-ruler mr-1"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.3 15.3a2.4 2.4 0 0 1 0 3.4l-2.6 2.6a2.4 2.4 0 0 1-3.4 0L2.7 8.7a2.41 2.41 0 0 1 0-3.4l2.6-2.6a2.41 2.41 0 0 1 3.4 0Z"
                />
                <path
                  d="m14.5 12.5 2-2"
                />
                <path
                  d="m11.5 9.5 2-2"
                />
                <path
                  d="m8.5 6.5 2-2"
                />
                <path
                  d="m17.5 15.5 2-2"
                />
              </svg>
              <span
                class="font-bold mr-2"
              >
                Items Dimensions:
              </span>
              100
               × 
              80
               ×
               
              80
               mm
            </div>
            <div
              class="flex items-center mb-2"
            >
               
              <svg
                aria-hidden="true"
                class="lucide lucide-scale mr-1"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 3v18"
                />
                <path
                  d="m19 8 3 8a5 5 0 0 1-6 0zV7"
                />
                <path
                  d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
                />
                <path
                  d="m5 8 3 8a5 5 0 0 1-6 0zV7"
                />
                <path
                  d="M7 21h10"
                />
              </svg>
              <span
                class="font-bold mr-2"
              >
                Total Weight:
              </span>
              2000
              g / 
              5000
              g
            </div>
            <div
              class="mb-2"
            >
              <div
                class="flex justify-between"
              >
                <span
                  class="font-bold"
                >
                  Weight Utilization:
                </span>
                <span>
                  40.0
                  %
                </span>
              </div>
              <div
                class="w-full bg-gray-200 rounded-full h-2.5"
              >
                <div
                  class="h-2.5 rounded-full bg-green-500"
                  style="width: 40%;"
                />
              </div>
            </div>
            <div
              class="mb-3"
            >
              <div
                class="flex justify-between"
              >
                <span
                  class="font-bold"
                >
                  Volume Utilization:
                </span>
                <span>
                  9.3
                  %
                </span>
              </div>
              <div
                class="w-full bg-gray-200 rounded-full h-2.5"
              >
                <div
                  class="h-2.5 rounded-full bg-green-500"
                  style="width: 9.333333333333334%;"
                />
              </div>
            </div>
          </div>
          <div
            class="mt-3"
          >
            <h5
              class="text-base font-semibold mb-2"
            >
              Items in this box:
            </h5>
            <div
              class="overflow-x-auto"
            >
              <table
                class="w-full text-sm"
              >
                <thead>
                  <tr
                    class="border-b border-gray-200"
                  >
                    <th
                      class="text-left py-2 px-3"
                    >
                      Item
                    </th>
                    <th
                      class="text-left py-2 px-3"
                    >
                      Qty
                    </th>
                    <th
                      class="text-left py-2 px-3"
                    >
                      Weight
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    class="border-b border-gray-100"
                  >
                    <td
                      class="py-2 px-3"
                    >
                      <div
                        class="text-sm"
                      >
                        Small Item
                      </div>
                      <div>
                        <small
                          class="text-gray-600"
                        >
                          50
                          ×
                          40
                          ×
                          30
                          mm
                        </small>
                      </div>
                    </td>
                    <td
                      class="py-2 px-3"
                    >
                      2
                    </td>
                    <td
                      class="py-2 px-3"
                    >
                      1000
                      g
                    </td>
                  </tr>
                  <tr
                    class="border-b border-gray-100"
                  >
                    <td
                      class="py-2 px-3"
                    >
                      <div
                        class="text-sm"
                      >
                        Larger Item
                      </div>
                      <div>
                        <small
                          class="text-gray-600"
                        >
                          100
                          ×
                          80
                          ×
                          20
                          mm
                        </small>
                      </div>
                    </td>
                    <td
                      class="py-2 px-3"
                    >
                      1
                    </td>
                    <td
                      class="py-2 px-3"
                    >
                      1000
                      g
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BoxResultsDisplay > BoxResultsDisplay component > should match snapshot for no fit result 1`] = `
<div
  class="box-results mt-4"
>
  <h3
    class="h4 mb-3"
  >
    Box Packing Results
  </h3>
  <div
    class="bg-yellow-100 border border-yellow-400 text-yellow-700 px-4 py-3 rounded"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert inline mr-2"
      fill="none"
      height="18"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    Some items could not fit in any available box.
    <div
      class="bg-white border border-red-500 rounded mt-3"
    >
      <div
        class="bg-red-500 text-white px-4 py-3 border-b border-red-500"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert inline mr-2"
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        Items That Don't Fit
      </div>
      <div
        class="p-4"
      >
        <div
          class="overflow-x-auto"
        >
          <table
            class="w-full text-sm"
          >
            <thead>
              <tr
                class="border-b border-gray-200"
              >
                <th
                  class="text-left py-2 px-3"
                >
                  Item
                </th>
                <th
                  class="text-left py-2 px-3"
                >
                  Dimensions
                </th>
                <th
                  class="text-left py-2 px-3"
                >
                  Weight
                </th>
                <th
                  class="text-left py-2 px-3"
                >
                  Qty
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="border-b border-gray-100"
              >
                <td
                  class="py-2 px-3"
                >
                  Small Item
                </td>
                <td
                  class="py-2 px-3"
                >
                  50
                  ×
                  40
                  ×
                  30
                  mm
                </td>
                <td
                  class="py-2 px-3"
                >
                  500
                  g
                </td>
                <td
                  class="py-2 px-3"
                >
                  2
                </td>
              </tr>
              <tr
                class="border-b border-gray-100"
              >
                <td
                  class="py-2 px-3"
                >
                  Larger Item
                </td>
                <td
                  class="py-2 px-3"
                >
                  100
                  ×
                  80
                  ×
                  20
                  mm
                </td>
                <td
                  class="py-2 px-3"
                >
                  1000
                  g
                </td>
                <td
                  class="py-2 px-3"
                >
                  1
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <p
          class="text-sm text-red-600 mt-2 mb-0"
        >
          These items exceed the dimensions or weight limits of all available boxes. Consider splitting large items or using custom shipping solutions.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`BoxResultsDisplay BoxResultsDisplay component should match snapshot for basic packing result 1`] = `
<div
  class="box-results mt-4"
>
  <h3
    class="h4 mb-3"
  >
    Box Packing Results
  </h3>
  <p
    class="mb-2"
  >
    Items will be packed into
     
    <strong>
      1
    </strong>
     box(es).
  </p>
  <div
    class="row"
  >
    <div
      class="col-md-6 col-lg-4 mb-3"
    >
      <div
        class="card h-100 shadow-sm"
      >
        <div
          class="card-header bg-primary text-white"
        >
          <div
            class="d-flex align-items-center"
          >
            <svg
              class="lucide lucide-package2 lucide-package-2 me-2"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 9h18v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V9Z"
              />
              <path
                d="m3 9 2.45-4.9A2 2 0 0 1 7.24 3h9.52a2 2 0 0 1 1.8 1.1L21 9"
              />
              <path
                d="M12 3v6"
              />
            </svg>
            <h4
              class="card-title mb-0"
            >
              Box 
              1
              : 
              Test Box
            </h4>
          </div>
        </div>
         
        <div
          class="card-body"
        >
          <div
            class="mb-3"
          >
            <div
              class="d-flex align-items-center mb-2"
            >
              <svg
                class="lucide lucide-ruler me-1"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.3 15.3a2.4 2.4 0 0 1 0 3.4l-2.6 2.6a2.4 2.4 0 0 1-3.4 0L2.7 8.7a2.41 2.41 0 0 1 0-3.4l2.6-2.6a2.41 2.41 0 0 1 3.4 0Z"
                />
                <path
                  d="m14.5 12.5 2-2"
                />
                <path
                  d="m11.5 9.5 2-2"
                />
                <path
                  d="m8.5 6.5 2-2"
                />
                <path
                  d="m17.5 15.5 2-2"
                />
              </svg>
              <span
                class="fw-bold me-2"
              >
                Box Dimensions:
              </span>
              200
               × 
              150
               × 
              100
               
              mm
            </div>
            <div
              class="d-flex align-items-center mb-2"
            >
               
              <svg
                class="lucide lucide-ruler me-1"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21.3 15.3a2.4 2.4 0 0 1 0 3.4l-2.6 2.6a2.4 2.4 0 0 1-3.4 0L2.7 8.7a2.41 2.41 0 0 1 0-3.4l2.6-2.6a2.41 2.41 0 0 1 3.4 0Z"
                />
                <path
                  d="m14.5 12.5 2-2"
                />
                <path
                  d="m11.5 9.5 2-2"
                />
                <path
                  d="m8.5 6.5 2-2"
                />
                <path
                  d="m17.5 15.5 2-2"
                />
              </svg>
              <span
                class="fw-bold me-2"
              >
                Items Dimensions:
              </span>
              100
               × 
              80
               ×
               
              80
               mm
            </div>
            <div
              class="d-flex align-items-center mb-2"
            >
               
              <svg
                class="lucide lucide-scale me-1"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m16 16 3-8 3 8c-.87.65-1.92 1-3 1s-2.13-.35-3-1Z"
                />
                <path
                  d="m2 16 3-8 3 8c-.87.65-1.92 1-3 1s-2.13-.35-3-1Z"
                />
                <path
                  d="M7 21h10"
                />
                <path
                  d="M12 3v18"
                />
                <path
                  d="M3 7h2c2 0 5-1 7-2 2 1 5 2 7 2h2"
                />
              </svg>
              <span
                class="fw-bold me-2"
              >
                Total Weight:
              </span>
              2000
              g / 
              5000
              g
            </div>
            <div
              class="mb-2"
            >
              <div
                class="d-flex justify-content-between"
              >
                <span
                  class="fw-bold"
                >
                  Weight Utilization:
                </span>
                <span>
                  40.0
                  %
                </span>
              </div>
              <div
                class="progress"
                style="height: 10px;"
              >
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="40"
                  class="progress-bar bg-success"
                  role="progressbar"
                  style="width: 40%;"
                />
              </div>
            </div>
            <div
              class="mb-3"
            >
              <div
                class="d-flex justify-content-between"
              >
                <span
                  class="fw-bold"
                >
                  Volume Utilization:
                </span>
                <span>
                  9.3
                  %
                </span>
              </div>
              <div
                class="progress"
                style="height: 10px;"
              >
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="9.333333333333334"
                  class="progress-bar bg-success"
                  role="progressbar"
                  style="width: 9.333333333333334%;"
                />
              </div>
            </div>
          </div>
          <div
            class="mt-3"
          >
            <h5
              class="card-subtitle mb-2"
            >
              Items in this box:
            </h5>
            <div
              class="table-responsive"
            >
              <table
                class="table table-sm table-striped"
              >
                <thead>
                  <tr>
                    <th>
                      Item
                    </th>
                    <th>
                      Qty
                    </th>
                    <th>
                      Weight
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      <small>
                        Small Item
                      </small>
                      <div>
                        <small
                          class="text-muted"
                        >
                          50
                          ×
                          40
                          ×
                          30
                          mm
                        </small>
                      </div>
                    </td>
                    <td>
                      2
                    </td>
                    <td>
                      1000
                      g
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <small>
                        Larger Item
                      </small>
                      <div>
                        <small
                          class="text-muted"
                        >
                          100
                          ×
                          80
                          ×
                          20
                          mm
                        </small>
                      </div>
                    </td>
                    <td>
                      1
                    </td>
                    <td>
                      1000
                      g
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BoxResultsDisplay BoxResultsDisplay component should match snapshot for no fit result 1`] = `
<div
  class="box-results mt-4"
>
  <h3
    class="h4 mb-3"
  >
    Box Packing Results
  </h3>
  <div
    class="alert alert-warning"
  >
    <svg
      class="lucide lucide-circle-alert me-2"
      fill="none"
      height="18"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    Some items could not fit in any available box.
    <div
      class="card border-danger mt-3"
    >
      <div
        class="card-header bg-danger text-white"
      >
        <svg
          class="lucide lucide-circle-alert me-2"
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        Items That Don't Fit
      </div>
      <div
        class="card-body"
      >
        <div
          class="table-responsive"
        >
          <table
            class="table table-sm"
          >
            <thead>
              <tr>
                <th>
                  Item
                </th>
                <th>
                  Dimensions
                </th>
                <th>
                  Weight
                </th>
                <th>
                  Qty
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  Small Item
                </td>
                <td>
                  50
                  ×
                  40
                  ×
                  30
                  mm
                </td>
                <td>
                  500
                  g
                </td>
                <td>
                  2
                </td>
              </tr>
              <tr>
                <td>
                  Larger Item
                </td>
                <td>
                  100
                  ×
                  80
                  ×
                  20
                  mm
                </td>
                <td>
                  1000
                  g
                </td>
                <td>
                  1
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <p
          class="small text-danger mt-2 mb-0"
        >
          These items exceed the dimensions or weight limits of all available boxes. Consider splitting large items or using custom shipping solutions.
        </p>
      </div>
    </div>
  </div>
</div>
`;
